# TopoRAG

./: .gitignore  AUDIT_experiment_B_2026-07-09.md  EVALUATION_DESIGN.md  README.md  RESULTS_experiment_B_2026-07-08.md  SIMULATION_DESIGN.md  ablation.py  baseline_name_map.yaml  block_decomposer.py  check_scope.py  circuit_graph.py  circuit_ir.py  circuit_rag.py  circuit_simulator.py  comprehension_corpus.yaml  eval_expected.yaml  evaluate.py  feature_extractor.py  features_db.json  ir_repr_eval.py  ir_repr_eval_scale.py  kicad_sch_to_toporag.py  kicad_to_toporag.py  knowledge_cards.py  knowledge_cards.yaml  llm_client.py  netlist_comprehension_eval.py  ollama_client.py  pyproject.toml  query_netlists.json  real_corpus.json  real_expected.yaml  reject_eval.py  requirements.txt  run_baseline_direct.py  run_experiment_b.py  sample_netlists.json  scope_taxonomy.yaml  score_baseline_direct.py  topo_kernel.py  (+1 more)
docs/: CARD_SPEC.md  EVALUATION_DESIGN.md  EXPERIMENT_A_DESIGN.md  HANDOFF_2026-06-09.md  IR_SPEC.md  RELATED_WORK_graphrag.md  SGNB_IMPROVEMENTS.md  実験B引き継ぎ_カード執筆.md  実験B監査指示.md
kicad_real_test/: LC-Series-resonance.kicad_sch  NMOS-Amplifier-CS.kicad_sch  NPN-Amplifier-CE.kicad_sch  OPamp-inverting.kicad_sch  OPamp-noninverting.kicad_sch  OPamp-voltage-follower.kicad_sch  RC-Bandpass.kicad_sch  RC-Highpass.kicad_sch  RC-Lowpass.kicad_sch  Rectifier-1D.kicad_sch  active_results.txt  converted.json  final_check.txt  results.txt
results/: RESULTS_experiment_B_2026-07-08.md  RESULTS_netlist_comprehension_2026-07-01.md  RESULT_experiment_A_2026-07-05.md  audit_table.txt  baseline_p1_claude.jsonl  baseline_p1_claude_retry.jsonl  baseline_p1_mock.jsonl  (+6 more)
(+16 files in other folders)
